extends MarginContainer

# # Called when the node enters the scene tree for the first time.
# func _ready():
# 	pass

# # Called every frame. 'delta' is the elapsed time since the previous frame.
# func _process(delta):
# 	pass

func _on_attack_4_pressed():
	pass # Replace with function body.


func _on_attack_3_pressed():
	pass # Replace with function body.


func _on_attack_2_pressed():
	pass # Replace with function body.

func _on_attack_1_pressed():
	print("Hello1")
